--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -233,7 +233,7 @@ body.show-modal--first-filter {
     }
 }
 
-.modal--multistep-form {
+.show-modal .modal--multistep-form {
     .modal-content {
         height: 66vh;
 
