--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -12,7 +12,7 @@
          data-taken-aanmaken--manager-taaktypes-value="{{ taaktypes|json_encode }}"
          data-taken-aanmaken--manager-gebruiker-value="{{ request.user.email }}"
          data-taken-aanmaken--manager-melding-uuid-value="{{ view.kwargs.id }}"
-         data-action="click->taken-aanmaken--manager#searchChangeHandler">
+         data-action="click->taken-aanmaken--manager#showHideSearchResult">
         <div class="modal-header border-bottom">
             <button type="button"
                     class="btn-close"
@@ -32,7 +32,7 @@
                             <div data-controller="row-search"
                                  data-row-search-disable-result-highlight-value="false"
                                  class="container__search form-row list--form-text-input">
-                                <input data-action="taken-aanmaken--manager#searchChangeHandler row-search#search"
+                                <input data-action="taken-aanmaken--manager#showHideSearchResult row-search#search"
                                        data-taken-aanmaken--manager-target="searchInput"
                                        type="search"
                                        class="form-control"
