--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -136,12 +136,12 @@
             {% comment %} <button class="btn btn-primary">Volgende</button> {% endcomment %}
             <div class="form-row btn-row">
                 <button type="reset"
-                        class="btn btn-textlink stap1"
+                        class="btn btn-tertiary stap1"
                         data-action="modal#closeModal"
                         data-modal-target="modal">
                     <span>Annuleren</span>
                 </button>
-                <button class="btn btn-textlink stap2"
+                <button class="btn btn-tertiary stap2"
                         data-taken-aanmaken--manager-target="knopVorige"
                         data-action="taken-aanmaken--manager#gotoPreviousStep">
                     <span>Vorige</span>
