meerdere taken: styling opmerkingen

--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -206,7 +206,8 @@
                     <textarea name="form-0-bericht"
                               maxlength="5000"
                               rows="4"
-                              id="id_form-0-bericht"></textarea>
+                              id="id_form-0-bericht"
+                              data-action="taken-aanmaken--manager#taaktypeBerichtHandler"></textarea>
                     <p class="help-text">De opmerking wordt met de uitvoerder gedeeld.</p>
                     <input type="hidden"
                            name="form-0-titel"
