--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -1158,8 +1158,15 @@ form.taken-aanmaken {
             display: flex;
             gap: 1em;
             > div {
-                flex: 1 1 33.333%;
-                max-width: 33.333%;
+                &:first-child,
+                &:last-child {
+                    flex: 1 1 40%;
+                    max-width: 40%;
+                }
+                &:nth-child(2) {
+                    flex: 1 1 20%;
+                    max-width: 20%;
+                }
             }
         }
 
@@ -1206,6 +1213,20 @@ form.taken-aanmaken {
                 .container__titel {
                     font-weight: 700;
                 }
+
+                .cta--summary {
+                    max-width: calc(100% - 100px);
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    display: inline-block;
+                    margin-left: 10px;
+
+                    &.has-text {
+                        color: $gray-600;
+                        text-decoration: none;
+                    }
+                }
             }
 
             h3 {
@@ -1229,10 +1250,10 @@ form.taken-aanmaken {
             padding: 1rem 0.889rem;
 
             > div:first-child {
-                flex: 1 1 66.667%;
+                flex: 1 1 60%;
             }
             > div:last-child {
-                flex: 1 1 33.333%;
+                flex: 1 1 40%;
             }
         }
     }
