--- a/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
+++ b/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
@@ -257,7 +257,9 @@
             <label class="{% if field.field.required %}{{ form.required_css_class }}{% endif %}"
                    for="{{ field.auto_id }}">
                 {{ field.field.label }}
-                {% if not field.field.required %}<small>(Niet verplicht)</small>{% endif %}
+                {% if field.field.widget.attrs.typeOfInput != 'search' %}
+                    {% if not field.field.required %}<small>(Niet verplicht)</small>{% endif %}
+                {% endif %}
             </label>
         {% endif %}
         <div>
