Meerdere taken: small fixes

--- a/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken_form.html
@@ -17,7 +17,7 @@
                     class="list--3cols-form">
                     <li>
                         <div>Taak</div>
-                        <div>Afdeling</div>
+                        <div>Verantwoordelijke afdeling</div>
                         <div>Opmerking</div>
                     </li>
                     {% for taaktype_form in form %}
