--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -917,7 +917,7 @@ input.readonly {
             text-overflow: ellipsis;
         }
 
-        a {
+        button {
             margin-left: 0.5em;
             svg {
                 width: 0.889rem;
