--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -463,6 +463,18 @@ textarea {
             }
         }
     }
+
+    &--clean {
+        border: 0;
+        background-color: transparent;
+        cursor: pointer;
+        padding: 0.25rem 0.25rem 0 0.25rem;
+
+        &:focus {
+            background-color: $gray-100;
+            outline-width: 0 !important;
+        }
+    }
 }
 
 a.btn {
