--- a/app/apps/main/templates/melding/melding_detail_locaties_adres_kaart.html
+++ b/app/apps/main/templates/melding/melding_detail_locaties_adres_kaart.html
@@ -42,22 +42,24 @@
         </div>
     </div>
 </div>
-<div>
-    <label for="lichtmasten_id">
-        <input id="lichtmasten_id"
-               type="checkbox"
-               data-detail-map-layer-types-param='["lichtmasten", "lichtmastenSto"]'
-               data-action="detail#onMapLayerChange">
-        Toon lichtmasten
-    </label>
-    <div class="container__uitklapper">
-        <span>{% include "icons/info.svg" %}</span>
-        <div class="legenda">
-            <ul class="list-clean">
-            </ul>
+{% if lichtmasten %}
+    <div>
+        <label for="lichtmasten_id">
+            <input id="lichtmasten_id"
+                   type="checkbox"
+                   data-detail-map-layer-types-param='["lichtmasten", "lichtmastenSto"]'
+                   data-action="detail#onMapLayerChange">
+            Toon lichtmasten
+        </label>
+        <div class="container__uitklapper">
+            <span>{% include "icons/info.svg" %}</span>
+            <div class="legenda">
+                <ul class="list-clean">
+                </ul>
+            </div>
         </div>
     </div>
-</div>
+{% endif %}
 <div class="container__map full-width">
     <div class="map"
          id="incidentMap"
