--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -187,12 +187,11 @@
                 </div>
                 <div>
                     <span class="cta--summary">Opmerking toevoegen</span>
-                    <a href="#"
-                       role="button"
-                       class="btn--remove"
-                       data-action="taken-aanmaken--manager#taaktypeVerwijderenHandler:prevent">
+                    <button role="button"
+                            class="btn--clean btn--remove"
+                            data-action="taken-aanmaken--manager#taaktypeVerwijderenHandler:prevent">
                         {% include "icons/bin.svg" %}
-                    </a>
+                    </button>
                 </div>
             </summary>
             <div class="container__flex">
