--- a/app/apps/main/templates/melding/part_gebruiker_modal_link.html
+++ b/app/apps/main/templates/melding/part_gebruiker_modal_link.html
@@ -3,7 +3,7 @@
     <dd>
         <a href=""
            class="link link--email"
-           data-action="detail#openModal"
+           data-action="modal#openModal"
            data-modal-action-param="{% url 'gebruiker_info' gebruiker_email=gebruiker.email %}">
             <svg width="20"
                  height="20"
