--- a/app/apps/context/templates/benc/melding_detail_acties.html
+++ b/app/apps/context/templates/benc/melding_detail_acties.html
@@ -18,7 +18,7 @@
         {% if perms.authorisatie.melding_afhandelen and not melding.afgesloten_op %}
             <button type="button"
                     class="btn btn-{% if melding.status.naam == 'controle' %}action{% else %}tertiary{% endif %}"
-                    data-action="detail#openModal"
+                    data-action="modal#openModal"
                     data-modal-action-param="{% url 'melding_afhandelen' melding.uuid %}">
                 <span>Melding afhandelen</span>
             </button>
@@ -27,7 +27,7 @@
         {% if perms.authorisatie.melding_heropenen and melding.afgesloten_op %}
             <button type="button"
                     class="btn btn-tertiary"
-                    data-action="detail#openModal"
+                    data-action="modal#openModal"
                     data-modal-action-param="{% url 'melding_heropenen' melding.uuid %}">
                 <span>Melding heropenen</span>
             </button>
@@ -39,7 +39,7 @@
                 <li>
                     <button type="button"
                             class="btn btn-icon btn-textlink"
-                            data-action="detail#openModal"
+                            data-action="modal#openModal"
                             data-modal-action-param="{% url 'taak_afronden' melding.uuid %}">
                         <svg width="18"
                              height="18"
@@ -56,7 +56,7 @@
                 <li>
                     <button type="button"
                             class="btn btn-icon btn-textlink"
-                            data-action="detail#openModal"
+                            data-action="modal#openModal"
                             data-modal-action-param="{% url 'taak_annuleren' melding.uuid %}">
                         <svg width="18"
                              height="18"
@@ -75,7 +75,7 @@
                 <li>
                     <button type="button"
                             class="btn btn-icon btn-textlink"
-                            data-action="detail#openModal"
+                            data-action="modal#openModal"
                             data-modal-action-param="{% url 'melding_annuleren' melding.uuid %}">
                         <svg width="18"
                              height="18"
