Meerdere taken aanmaken: scroll naar geopend taaktype in stap 2

--- a/app/apps/main/templates/melding/detail/taken_aanmaken.html
+++ b/app/apps/main/templates/melding/detail/taken_aanmaken.html
@@ -177,7 +177,7 @@
 </template>
 <template id="template_geselecteerd_formulier_taaktype">
     <li data-taken-aanmaken--manager-target="geselecteerdFormulierTaaktype">
-        <details data-action="click->taken-aanmaken--manager#toggleDetailsHandler">
+        <details data-action="taken-aanmaken--manager#toggleDetailsHandler">
             <summary>
                 <div class="container__titel">
                     <span data-titel></span>
