Zoeken zonder filter: show/hide toggle

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -644,6 +644,7 @@ body.no-js {
     padding: 0 !important;
     margin: 0;
     overflow: hidden;
+    pointer-events: none;
 }
 
 .show-vertical {
