--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -56,6 +56,7 @@
             &.hidden {
                 height: auto;
                 opacity: 0;
+                pointer-events: none;
             }
         }
 
