--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -898,6 +898,19 @@ input.readonly {
         padding: 2px 0 08px;
         font-size: 0.666em;
     }
+
+    &:has(input:placeholder-shown) {
+        .container__toggle-profile {
+            opacity: 0;
+            pointer-events: none;
+        }
+    }
+
+    &:has(input:focus) {
+        .container__toggle-profile {
+            opacity: 1;
+        }
+    }
 }
 
 .list__pills {
