--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -36,24 +36,27 @@
             <div class="container__tools">
                 {{ form.foldout_states }}
                 {{ form.limit|render_rotterdam_formulier }}
-                <div class="container__filter {% comment %} {% if not form.search_with_profiel_context.value %}disabled{% endif %}{% endcomment %}"
-                     data-filter-target="filterOverview">
-                    {% for veld in form.filters %}
-                        {% with foldout_name="foldout_filter-"|add:veld.name %}
-                            <div class="container__multiselect{% if foldout_name in form.foldout_states.value|json_encode %} show{% endif %}">
-                                <label class="visually-hidden">{{ veld.label }}</label>
-                                <button data-action="filter#toggleFilterElements"
-                                        data-filter-target="filterButton"
-                                        data-foldout-name="{{ foldout_name }}"
-                                        class="toggle js-toggle{% if veld.data|length > 0 %} active {% endif %}"
-                                        type="button"
-                                        {% if not form.search_with_profiel_context.value %}tabindex="-1"{% endif %}>
-                                    {{ veld.label|capfirst }}
-                                </button>
-                                <div class="wrapper">{{ veld }}</div>
-                            </div>
-                        {% endwith %}
-                    {% endfor %}
+                <div>
+                    <h2 class="h5">Filters</h2>
+                    <div class="container__filter {% if not form.search_with_profiel_context.value %}disabled{% endif %}"
+                         data-filter-target="filterOverview">
+                        {% for veld in form.filters %}
+                            {% with foldout_name="foldout_filter-"|add:veld.name %}
+                                <div class="container__multiselect{% if foldout_name in form.foldout_states.value|json_encode %} show{% endif %}">
+                                    <label class="visually-hidden">{{ veld.label }}</label>
+                                    <button data-action="filter#toggleFilterElements"
+                                            data-filter-target="filterButton"
+                                            data-foldout-name="{{ foldout_name }}"
+                                            class="toggle js-toggle{% if veld.data|length > 0 %} active {% endif %}"
+                                            type="button"
+                                            {% if not form.search_with_profiel_context.value %}tabindex="-1"{% endif %}>
+                                        {{ veld.label|capfirst }}
+                                    </button>
+                                    <div class="wrapper">{{ veld }}</div>
+                                </div>
+                            {% endwith %}
+                        {% endfor %}
+                    </div>
                 </div>
                 <div class="container__search">
                     <div class="container__info">
@@ -66,10 +69,9 @@
                         </div>
                     </div>
                     {{ form.q|render_rotterdam_formulier }}
-                    <div class="container__toggle-profile hidden"
-                         data-filter-target="toggleSearchProfileContainer">
-                        {{ form.search_with_profiel_context|render_rotterdam_formulier }}
-                    </div>
+                    <div class="container__toggle-profile"
+                         data-filter-target="toggleSearchProfileContainer"
+                         tabindex="0">{{ form.search_with_profiel_context|render_rotterdam_formulier }}</div>
                 </div>
             </div>
             <div class="container__table">
