--- a/app/apps/main/templates/melding/melding_lijst.html
+++ b/app/apps/main/templates/melding/melding_lijst.html
@@ -65,7 +65,10 @@
                             Meer info
                         </button>
                         <div class="searchinfo-tooltip">
-                            <span>Maak gebruik van komma's om op meerdere termen te zoeken</span>
+                            <span>Maak gebruik van komma's om op meerdere termen te zoeken.
+                                <br>
+                                <br>
+                            Klik op het kruisje om het zoeken te beëindigen en de filters weer te activeren.</span>
                         </div>
                     </div>
                     {{ form.q|render_rotterdam_formulier }}
