--- a/app/apps/main/templates/melding/detail/tijdlijn.html
+++ b/app/apps/main/templates/melding/detail/tijdlijn.html
@@ -244,4 +244,5 @@
             {% endwith %}
         {% endfor %}
     </ul>
+    <small style="color: #dedede; display: block; text-align: right;">{{ tijdlijn_data|length }}</small>
 {% endblock content %}
