Bigger map locatie aanpassen

--- a/app/apps/main/templates/melding/part_locatie_aanpassen.html
+++ b/app/apps/main/templates/melding/part_locatie_aanpassen.html
@@ -5,7 +5,7 @@
 {% load melding_taken from melding_tags %}
 {% melding_taken melding as taak_info %}
 <turbo-frame id="melding_actie_form">
-<div class="modal-dialog">
+<div class="modal-dialog modal-dialog--wide">
     <div class="modal-content">
         <div class="modal-header">
             <button type="button"
