--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -129,9 +129,13 @@
             margin-top: 0;
         }
 
+        label {
+            display: inline-block;
+            margin-bottom: 0.5rem;
+        }
         input[type="checkbox"] {
             @include form-check-input();
-            margin-bottom: 1em;
+            vertical-align: sub;
         }
     }
 
