Locaties aanpassen: Fix jumping page

--- a/app/apps/main/templates/melding/part_locatie_aanpassen.html
+++ b/app/apps/main/templates/melding/part_locatie_aanpassen.html
@@ -27,6 +27,7 @@
                 </span>
                 <div>
                     Sleep het blauwe bolletje naar de juiste plek of klik op de kaart. Selecteer daarna het meest toepasselijke adres bij de coördinaten.
+                    Houd de CTRL-toets ingedrukt om de kaart in- en uit te zoomen met het muiswiel.
                 </div>
             </div>
         </div>
